File: testsuite/nexus-content-suite/pom.xml